<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#363537"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="fill_parent"
                android:layout_height="272dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagen1"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974"
=======
                tools:srcCompat="@tools:sample/backgrounds/scenic"
>>>>>>> sprint2
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:fontFamily="serif"
                android:text="@string/Title1"
                android:textColor="#D2DFDF"
                android:textSize="20sp"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974" />
=======
                />
>>>>>>> sprint2

            <TextView
                android:id="@+id/textViewDescribe"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="serif"
                android:text="@string/Describe1"
                android:textColor="#D2DFDF"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:fontFamily="serif"
                android:text="@string/Title2"
                android:textColor="#D2DFDF"
                android:textSize="20sp"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974" />
=======
                 />

>>>>>>> sprint2

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="fill_parent"
                android:layout_height="274dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagen1"
<<<<<<< HEAD
                app:srcCompat="@drawable/pexels_santiago_boada_7613843"
=======
                app:srcCompat="@drawable/bogot2"
>>>>>>> sprint2
                tools:ignore="ImageContrastCheck"

                />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="serif"
                android:text="@string/Describe2"
                android:textColor="#D2DFDF"
                android:textSize="20sp"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974" />
=======
                 />
>>>>>>> sprint2

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="25dp"
                android:fontFamily="serif"
                android:text="@string/Title3"
                android:textColor="#D2DFDF"
                android:textSize="20sp"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974" />
=======
                 />
>>>>>>> sprint2

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="fill_parent"
                android:layout_height="274dp"
                android:layout_marginTop="5dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/imagen1"
<<<<<<< HEAD
                app:srcCompat="@drawable/pexels_pixabay_63332"
=======
                app:srcCompat="@drawable/vancover2"
>>>>>>> sprint2
                tools:ignore="ImageContrastCheck"

                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="serif"
                android:text="@string/Describe3"
                android:textColor="#D2DFDF"
                android:textSize="20sp"
<<<<<<< HEAD
                app:srcCompat="@drawable/_205974" />
=======
                 />





>>>>>>> sprint2



        </LinearLayout>


    </ScrollView>


</LinearLayout>
<<<<<<< HEAD


=======
>>>>>>> sprint2
